more header alignment fixes

--- a/src/sass/components/_navigator.scss
+++ b/src/sass/components/_navigator.scss
@@ -286,10 +286,10 @@ $pop-up-menu-cordova-padding: 10px;
     background: #fff;
     overflow: hidden;
     display: inline;
+    margin-top: 7px;
     min-width: 24px;
     max-width: 34px;
     @include breakpoints(max mid-small) {
-      margin-top: $space-xs;
       margin-bottom: $space-xs;
     }
   }
